--- a/StudentMobile/package.json
+++ b/StudentMobile/package.json
@@ -14,8 +14,11 @@
     "@react-navigation/drawer": "^5.12.4",
     "@react-navigation/native": "^5.9.3",
     "@react-navigation/stack": "^5.14.3",
+    "firebase": "^8.3.1",
+    "lottie-react-native": "^3.5.0",
     "react": "17.0.1",
     "react-native": "0.64.0",
+    "react-native-animated-loader": "0.0.9",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.2.0",
